=============================================================================
 This file describes changes in the cvec package beginning from version 1.2:
=============================================================================

==========================
 Changes from 1.5 -> 1.6:
==========================

  - Improve MinimalPolynomialMC, change calling convention.
  - Fixed a dangerous bug in matrix multiplication using the
    memory-saving Winograd trick.
  - Better Value method for CMats (do nothing a human would not also do)
  - Put AddMatrix and MultMatrix into interface and implement it for cmats
  - Put revision 298 as version 1.6 on the web.


==========================
 Changes from 1.4 -> 1.5:
==========================

  - Improve usage of grease, in particular for level 1 for 2 < q < 257
  - Improve FILL_GREASE_TAB by using trick coming from analysis: we only
    have to multiply a few times by the primitive root, not by powers of it.
  - Fixed a serious bug in SemiEchelonBasisMutableTX which occurred if
    the first row of the matrix was zero.
  - New operation CompanionMatrix (not yet documented)
  - GreaseCalibration for different machines (not yet documented)
  - Winograd trick for multiplication, corresponding calibration function
  - Put copyright and licensing information in all files.
  - Add version number to archive name, fixed some things in PackageInfo.g.
  - Put revision 280 as version 1.5 on the web.


==========================
 Changes from 1.3 -> 1.4:
==========================

  - Adjust to new buffered I/O.
  - New operation ChangeBaseDomain with methods for cvecs and cmats.
  - Put revision 212 as version 1.4 on the web.


==========================
 Changes from 1.2 -> 1.3:
==========================

  - change nearly everything to the new vector/matrix interface
  - implement new Intersection functionality no longer using Zassenhaus
  - allow for more than one package with a C-part